# ArbitrageAI

./: .gitignore  PLAN.md  README.md  orchestrator.py  pyproject.toml  reflection.md
models/: schemas.py
outputs/: case_analysis.md  claim_classifications.json  claim_heads.json  index.json  type_classifications.json  type_taxonomy.json
pipeline/: phase1_index.py  phase2_types.py  phase3_claims.py  phase4_analysis.py
segments/Abstract_Statement_-_Construction_Work_Deviation/: ocr_text.txt
segments/Annexure_-_Construction_Milestones_ISITE_Bangalore/: ocr_text.txt
segments/Application_-_Extension_of_Time_for_Construction/: ocr_text.txt
segments/Board_Resolution_-_Arbitration_Authorization/: ocr_text.txt
segments/Certificate_-_Final_Bill_for_Construction_Work/: ocr_text.txt
segments/Claim_Abstract_-_Covid_and_Prolongation_Charges/: ocr_text.txt
segments/Claim_Letter_-_Construction_Dispute_Settlement/: ocr_text.txt
segments/Claim_Statement_-_Construction_Project_AITF-1/: ocr_text.txt
segments/Clarification_Letter_-_EOT_Crane_Work/: ocr_text.txt
segments/Completion_Certificate_-_AITF-1_Extension_Work/: ocr_text.txt
segments/Contract_Agreement_-_Construction_of_AITF-1_Facility/: ocr_text.txt
segments/Court_Filing_-_Construction_Dispute/: ocr_text.txt
segments/Demand_Notice_-_Construction_Project_Delays/: ocr_text.txt
segments/Financial_Report_-_Lockdown_Expenses/: ocr_text.txt
segments/Government_Order_-_Compensation_for_Construction_Delay/: ocr_text.txt
segments/Invoice_-_Construction_Escalation_Bill/: ocr_text.txt
utils/: file_io.py  llm.py
(+35 files in other folders)
