[project]
name = "agentic-arbitration"
version = "0.1.0"
description = "Multi-phase LLM pipeline for construction arbitration document analysis"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "utils", "pipeline"]
